react2/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-dply
  labels:
    app: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: techhouse1901/reactdoc
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000


# kubectl create secret tls hello-app-tls --namespace dev --key server.key --cert server.crt
