react2/ingress-tlsgenbyown.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  tls:
    - hosts:
        - angular-app.com # Replace with your cluster DNS name
      secretName: self-signed
  rules:
    - host: angular-app.com # Replace with your cluster DNS name
      http:
        paths:
          - backend:
              service:
                name: react-svc
                port:
                  number: 3000
            path: /
            pathType: Prefix
