react2/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - angular-app1.com
      secretName: tls-secret
  rules:
    - host: angular-app1.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: react-svc
                port:
                  number: 3000
